--- a/BT Advanced Core/Localization/CAC/Localization.json
+++ b/BT Advanced Core/Localization/CAC/Localization.json
@@ -22,7 +22,7 @@
 	},
 	{
 		"FileName": "",
-		"Name": "CAC.DESTROYED",
+		"Name": "CAC.misfire_Destroyed",
 		"Localization": {
 			"CULTURE_EN_US": "{0} DESTROYED"
 		}
@@ -134,7 +134,7 @@
 	},
 	{
 		"FileName": "",
-		"Name": "CAC.Damaged",
+		"Name": "CAC.misfire_Damaged",
 		"Localization": {
 			"CULTURE_EN_US": "Damaged"
 		}
