--- a/BT Advanced Core/Localization/CAC/RU/Localization.json
+++ b/BT Advanced Core/Localization/CAC/RU/Localization.json
@@ -22,7 +22,7 @@
 	},
 	{
 		"FileName": "",
-		"Name": "CAC.DESTROYED",
+		"Name": "CAC.misfire_Destroyed",
 		"Localization": {
 			"CULTURE_RU_RU": "{0} УНИЧТОЖЕН"
 		}
@@ -134,7 +134,7 @@
 	},
 	{
 		"FileName": "",
-		"Name": "CAC.Damaged",
+		"Name": "CAC.misfire_Damaged",
 		"Localization": {
 			"CULTURE_RU_RU": "Повреждено"
 		}
